# viat

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  REUSE.toml  poe.toml  poe_tasks.toml  pyproject.toml  zensical.toml
.github/workflows/: publish.yml  test.yml
docs/: README.markdown  README.md  configuration.md  index.md  installation.md  man.md  usage.md
docs/api/: exceptions.md  protocols.md  vault.md
docs/api/providers/: storage.md  tracker.md
docs/api/support/: collection_protocols.md  json.md  path_resolver.md  stdlib_protocols.md  toml.md
examples/: README.md
examples/bibliography/: README.md  check_consistency.py
examples/bibliography/.viat/: config.toml  index.bib  schema.json  storage.toml
examples/dotfiles/: README.md
examples/dotfiles/.viat/: config.toml  schema.json  storage.toml
examples/dotfiles/bin.common/: link-dotfiles  link-dotfiles-worker
examples/dotfiles/systemd.host.system/: frobnicate@.service
examples/dotfiles/systemd.host.user/: frobnicate.service
src/helpers/: build_backend.py  docs.py  paths.py
src/viat/: __init__.py  __main__.py  cli.py  conftest.py  exceptions.py  protocols.py  test_cli.py  test_vault.py  vault.py
src/viat/_cli/: __init__.py  group.py  json.py  output.py  state.py
src/viat/_cli/commands/: __init__.py  get.py  get_all.py  init.py  mv.py  rm.py  set.py  shell_export.py  stale.py  tracked.py  update.py
src/viat/_config/: __init__.py  git_tracker.py  glob_tracker.py  json_storage.py  load_config.py  loader.py  storage.py  toml_storage.py  tracker.py
src/viat/_vault/: __init__.py  config.py  resolver.py  vault.py
src/viat/providers/: __init__.py
src/viat/providers/storage/: __init__.py  json.py  test_json.py  test_toml.py  toml.py
src/viat/providers/storage/_json/: __init__.py  config.py  connection.py  mutator.py  reader.py  storage.py  storage_mixin.py
src/viat/providers/storage/_toml/: __init__.py  config.py  connection.py  mutator.py  reader.py  storage.py
src/viat/providers/tracker/: __init__.py  _base_mixin.py  git.py  glob.py  test_git.py  test_glob.py
src/viat/providers/tracker/_git/: __init__.py  config.py  mock.py  real.py
src/viat/support/: __init__.py  collection_protocols.py  json.py  path_resolver.py  stdlib_protocols.py  test_toml.py  toml.py
