[project]
name = "viat"
version = "0.10.1"
description = "A tool for managing virtual file attributes"
readme = "README.md"
requires-python = ">=3.12"
license = "Unlicense"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
]
dependencies = [
  "click (>=8.3)",
  "fastjsonschema (>=2.21)",
  "tomli-w>=1.2",
  "wcmatch (>=10)",
]

[project.optional-dependencies]
git = [
  "pygit2 (>=1.19)",
]

[project.urls]
Repository = "https://github.com/v--/viat.git"
Changelog = "https://github.com/v--/viat/blob/master/CHANGELOG.md"
Documentation = "https://viat.readthedocs.io/"

[project.scripts]
viat = "viat.cli:viat"

[dependency-groups]
dev = [
  "click-man (>=0.5.1)",
  "mkdocstrings-python (>=2)",
  "mypy (>=2)",
  "poethepoet (>=0.45)",
  "pytest (>=9.0.3)",
  "ruff (>=0.15)",
  "ruff-config-ivasilev @ git+https://github.com/v--/ruff-config-ivasilev.git@v0.15post7",
  "viat[git] (>=0.0.0)",
  "zensical (>=0.0.41)",
]

[build-system]
# uv build complains if no upper bound is set, but it updates its minor versions often, so we put a major version just to shut it up
requires = ["uv_build (>=0.10, <1)"]
build-backend = "uv_build"

# uv
[tool.uv]
resolution = "lowest-direct"

# poe
[tool.poe]
include = "./poe.toml"

# ruff
[tool.ruff]
extend = ".venv/share/ruff/ruff.ivasilev.toml"

[tool.ruff.lint.extend-per-file-ignores]
"src/helpers/*.py" = [
  "D1", # undocumented-*
]

# mypy
[tool.mypy]
packages = ["viat", "helpers"]

[[tool.mypy.overrides]]
module = [
  "click_man.*",
  "fastjsonschema.*",
]
ignore_missing_imports = true
