[project]
name = "viat"
version = "0.10.4"
description = "A tool for managing virtual file attributes"
readme = "README.md"
requires-python = ">=3.12"
license = "Unlicense"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
  # The rest of the classifiers will hopefully be populated dynamically at some point
  #   See https://github.com/astral-sh/uv/issues/8716
  "Typing :: Typed",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: Free Threading :: 3 - Stable",
]

dependencies = [
  "click (>=8.3)",
  "fastjsonschema (>=2.21)",
  "tomli-w (>=1.2)",
  "wcmatch (>=10)",
]

[project.optional-dependencies]
git = [
  "pygit2 (>=1.19)",
]

[project.urls]
Repository = "https://github.com/v--/viat.git"
Changelog = "https://github.com/v--/viat/blob/master/CHANGELOG.md"
Examples = "https://github.com/v--/viat/blob/master/examples"
Documentation = "https://viat.readthedocs.io/"

[project.scripts]
viat = "viat.cli:viat"

[dependency-groups]
lint = [
  "ruff (>=0.15)",
  "ruff-config-ivasilev @ git+https://github.com/v--/ruff-config-ivasilev.git@v0.15post7",
]

typing = [
  {include-group = "test"},
  "mypy (>=2)",
]

test = [
  "viat[git] (>=0.0.0)",
  "pytest (>=9.0.3)",
]

docs = [
  "click-man (>=0.5.1)",
  "mkdocstrings-python (>=2)",
  "zensical (>=0.0.41)",
]

dev = [
  "poethepoet (>=0.45)",
  "tox (>=4.5)",
  {include-group = "lint"},
  {include-group = "typing"},
  {include-group = "test"},
  {include-group = "docs"},
]

[build-system]
# uv build complains if no upper bound is set, but it updates its minor versions often, so we put a major version just to shut it up
requires = ["uv_build (>=0.10, <1)"]
build-backend = "uv_build"

# uv
[tool.uv]
resolution = "lowest-direct"

# poe
[tool.poe]
include = "./poe.toml"

# tox
[tool.tox]
env_list = ["lint", "typing", "3.12", "3.13", "3.14", "3.15", "3.15t"]

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["pytest"]]

[tool.tox.env.lint]
dependency_groups = ["lint"]
commands = [["ruff", "check"]]

[tool.tox.env.typing]
dependency_groups = ["typing"]
commands = [["mypy", "--package", "viat"]]

# ruff
[tool.ruff]
extend = ".venv/share/ruff/ruff.ivasilev.toml"

[tool.ruff.lint.extend-per-file-ignores]
"examples/bibliography/check_consistency.py" = [
  "D1", # undocumented-*
]
"src/helpers/*.py" = [
  "D1", # undocumented-*
]

# mypy
[tool.mypy]
packages = ["viat", "helpers"]

[[tool.mypy.overrides]]
module = [
  "click_man.*",
  "fastjsonschema.*",
]
ignore_missing_imports = true
